; ModuleID = '/home/carl/AnghaBench/redis/src/extr_cluster.c_migrateCloseTimedoutSockets.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_cluster.c_migrateCloseTimedoutSockets.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, i32 }
%struct.TYPE_5__ = type { i64, i32 }

@server = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@MIGRATE_SOCKET_CACHE_TTL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @migrateCloseTimedoutSockets() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @server, i32 0, i32 1), align 8
  %5 = call i32* @dictGetSafeIterator(i32 %4)
  store i32* %5, i32** %1, align 8
  br label %6

6:                                                ; preds = %31, %0
  %7 = load i32*, i32** %1, align 8
  %8 = call i32* @dictNext(i32* %7)
  store i32* %8, i32** %2, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %32

10:                                               ; preds = %6
  %11 = load i32*, i32** %2, align 8
  %12 = call %struct.TYPE_5__* @dictGetVal(i32* %11)
  store %struct.TYPE_5__* %12, %struct.TYPE_5__** %3, align 8
  %13 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @server, i32 0, i32 0), align 8
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = sub nsw i64 %13, %16
  %18 = load i64, i64* @MIGRATE_SOCKET_CACHE_TTL, align 8
  %19 = icmp sgt i64 %17, %18
  br i1 %19, label %20, label %31

20:                                               ; preds = %10
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 8
  %24 = call i32 @connClose(i32 %23)
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %26 = call i32 @zfree(%struct.TYPE_5__* %25)
  %27 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @server, i32 0, i32 1), align 8
  %28 = load i32*, i32** %2, align 8
  %29 = call i32 @dictGetKey(i32* %28)
  %30 = call i32 @dictDelete(i32 %27, i32 %29)
  br label %31

31:                                               ; preds = %20, %10
  br label %6

32:                                               ; preds = %6
  %33 = load i32*, i32** %1, align 8
  %34 = call i32 @dictReleaseIterator(i32* %33)
  ret void
}

declare dso_local i32* @dictGetSafeIterator(i32) #1

declare dso_local i32* @dictNext(i32*) #1

declare dso_local %struct.TYPE_5__* @dictGetVal(i32*) #1

declare dso_local i32 @connClose(i32) #1

declare dso_local i32 @zfree(%struct.TYPE_5__*) #1

declare dso_local i32 @dictDelete(i32, i32) #1

declare dso_local i32 @dictGetKey(i32*) #1

declare dso_local i32 @dictReleaseIterator(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
